--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
       </div>
     </nav>
   </div>
+  <!-- header work is finished in here and we work in stope carousel  -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5 align-self-center">
+        <div>
+          <span class="span-orange">Are you ready to Learn?</span>
+          <h1> Learn With fun</h1>
+          <h1 class="pb-3">on <span class="span-green">any schedule</span></h1>
+          <p class="pb-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius
+            blandit facilisis quam netus.
+          </p>
+          <button class="btn btn-success nav-btn">Get Started</button>
+        </div>
+      </div>
+      <div class="col-md-7">
+        <img class="carosel-img" src="./images/Photos/Illustration.png" alt="" />
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
