--- a/index.html
+++ b/index.html
@@ -12,56 +12,179 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">
-        <img src="./images/ICON/Logo.png" alt="" />
-      </a>
-      <div class="container-fluid d-flex flex-row-reverse">
-        <div class="text-aline">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item mx-4">
-                <a class="nav-link active" aria-current="page" href="#">Books</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="#">Courses</a>
-              </li>
-              <li class="nav-item mx-4">
-                <a class="nav-link" href="#">Other</a>
-              </li>
-              <button class="btn btn-success mx-4 nav-btn">Sing in</button>
-            </ul>
+  <div class="background-color cards">
+    <div class="container background-color">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+          <img src="./images/ICON/Logo.png" alt="" />
+        </a>
+        <div class="container-fluid d-flex flex-row-reverse">
+          <div class="text-aline">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item mx-4">
+                  <a class="nav-link active" aria-current="page" href="#">Books</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="#">Courses</a>
+                </li>
+                <li class="nav-item mx-4">
+                  <a class="nav-link" href="#">Other</a>
+                </li>
+                <button class="btn btn-success mx-4 nav-btn">Sing in</button>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-  </div>
-  <!-- header work is finished in here and we work in stope carousel  -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5 align-self-center">
-        <div>
-          <span class="span-orange">Are you ready to Learn?</span>
-          <h1> Learn With fun</h1>
-          <h1 class="pb-3">on <span class="span-green">any schedule</span></h1>
-          <p class="pb-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius
-            blandit facilisis quam netus.
-          </p>
-          <button class="btn btn-success nav-btn">Get Started</button>
+      </nav>
+    </div>
+    <!-- header work is finished in here and we work in stope carousel  -->
+    <div class="container background-color">
+      <div class="row">
+        <div class="col-md-5 align-self-center">
+          <div>
+            <span class="span-orange">Are you ready to Learn?</span>
+            <h1> Learn With fun</h1>
+            <h1 class="pb-3">on <span class="span-green">any schedule</span></h1>
+            <p class="pb-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius
+              blandit facilisis quam netus.
+            </p>
+            <button class="btn btn-success nav-btn">Get Started</button>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <img class="carosel-img" src="./images/Photos/Illustration.png" alt="" />
         </div>
       </div>
-      <div class="col-md-7">
-        <img class="carosel-img" src="./images/Photos/Illustration.png" alt="" />
+    </div>
+    <!-- carousel area working is finised here  -->
+  </div>
+  <!-- this div is created for background color -->
+
+  <div class="container cards">
+    <div class="card-group">
+      <div class="card card1 align-self-center ">
+        <img class="img-size" src="./images/ICON/book.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">1500+ Topic</h5>
+          <p class="card-text">Learn Anythings</p>
+        </div>
+      </div>
+      <div class="card card1 align-self-center shadow">
+        <img class="img-size" src="./images/ICON/Student.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">1800+ Students</h5>
+          <p class="card-text">Learn Anythings</p>
+        </div>
+      </div>
+      <div class="card card1 align-self-center">
+        <img class="img-size" src="./images/ICON/Students.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">9K+ Test Token</h5>
+          <p class="card-text">Learn Anythings</p>
+        </div>
+      </div>
+      <div class="card card1 align-self-center">
+        <img class="img-size" src="./images/ICON/Test.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">2000+ Student</h5>
+          <p class="card-text">Learn Anythings</p>
+        </div>
       </div>
     </div>
   </div>
-  <!-- carousel area working is finised here  -->
+  <!-- thard section is complite  -->
+
+  <div class="container">
+    <h2>Online Courses</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100 shadow">
+          <img class="img-p" src="./images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text">Designation</p>
+            <button class="btn btn-success nav-btn">Buy Course</button>
+          </div>
+          <div class="card-footer">
+            <div class="row">
+              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/calendar.png"
+                    alt=""> Start 20
+                  April, 2021</small></div>
+              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/people.png"
+                    alt=""> 60
+                  seats</small></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow">
+          <img class="img-p" src="./images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text">Designation</p>
+            <button class="btn btn-success nav-btn">Buy Course</button>
+          </div>
+          <div class="card-footer">
+            <div class="row">
+              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/calendar.png"
+                    alt=""> Start 20
+                  April, 2021</small></div>
+              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/people.png"
+                    alt=""> 60
+                  seats</small></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow">
+          <img class="img-p" src="./images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text">Designation</p>
+            <button class="btn btn-success nav-btn">Buy Course</button>
+          </div>
+          <div class="card-footer">
+            <div class="row">
+              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/calendar.png"
+                    alt=""> Start 20
+                  April, 2021</small></div>
+              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/people.png"
+                    alt=""> 60
+                  seats</small></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- coures section end -->
+
+  <div class="container testimonial">
+    <h2>Testimonial</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div>
+          <img class="testmo" src="./images/Photos/Man.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-8">
+        <p>There are many variations of passages of Lorem Ipsum available, but the
+
+          majority have suffered alteration in some form, by injected humour,
+
+          or randomised words which don't look even slightly believable.
+        </p>
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
