--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="./images/ICON/flogo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -48,8 +49,10 @@
         <div class="col-md-5 align-self-center">
           <div>
             <span class="span-orange">Are you ready to Learn?</span>
-            <h1> Learn With fun</h1>
-            <h1 class="pb-3">on <span class="span-green">any schedule</span></h1>
+            <h1>Learn With fun</h1>
+            <h1 class="pb-3">
+              on <span class="span-green">any schedule</span>
+            </h1>
             <p class="pb-4">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius
               blandit facilisis quam netus.
@@ -68,29 +71,29 @@
 
   <div class="container cards">
     <div class="card-group">
-      <div class="card card1 align-self-center ">
-        <img class="img-size" src="./images/ICON/book.png" class="card-img-top" alt="...">
+      <div class="card card1 align-self-center">
+        <img class="img-size" src="./images/ICON/book.png" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">1500+ Topic</h5>
           <p class="card-text">Learn Anythings</p>
         </div>
       </div>
       <div class="card card1 align-self-center shadow">
-        <img class="img-size" src="./images/ICON/Student.png" class="card-img-top" alt="...">
+        <img class="img-size" src="./images/ICON/Student.png" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">1800+ Students</h5>
           <p class="card-text">Learn Anythings</p>
         </div>
       </div>
       <div class="card card1 align-self-center">
-        <img class="img-size" src="./images/ICON/Students.png" class="card-img-top" alt="...">
+        <img class="img-size" src="./images/ICON/Students.png" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">9K+ Test Token</h5>
           <p class="card-text">Learn Anythings</p>
         </div>
       </div>
       <div class="card card1 align-self-center">
-        <img class="img-size" src="./images/ICON/Test.png" class="card-img-top" alt="...">
+        <img class="img-size" src="./images/ICON/Test.png" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">2000+ Student</h5>
           <p class="card-text">Learn Anythings</p>
@@ -105,7 +108,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100 shadow">
-          <img class="img-p" src="./images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+          <img class="img-p" src="./images/Photos/Morder pyschology.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Modern Psychology</h5>
             <p class="card-text">Designation</p>
@@ -113,19 +116,23 @@
           </div>
           <div class="card-footer">
             <div class="row">
-              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/calendar.png"
-                    alt=""> Start 20
-                  April, 2021</small></div>
-              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/people.png"
-                    alt=""> 60
-                  seats</small></div>
+              <div class="col-md-6">
+                <small class="text-muted">
+                  <img class="cources" src="./images/ICON/calendar.png" alt="" />
+                  Start 20 April, 2021</small>
+              </div>
+              <div class="col-md-6">
+                <small class="text-muted">
+                  <img class="cources" src="./images/ICON/people.png" alt="" />
+                  60 seats</small>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100 shadow">
-          <img class="img-p" src="./images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+          <img class="img-p" src="./images/Photos/Morder psyc.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Modern Psychology</h5>
             <p class="card-text">Designation</p>
@@ -133,19 +140,23 @@
           </div>
           <div class="card-footer">
             <div class="row">
-              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/calendar.png"
-                    alt=""> Start 20
-                  April, 2021</small></div>
-              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/people.png"
-                    alt=""> 60
-                  seats</small></div>
+              <div class="col-md-6">
+                <small class="text-muted">
+                  <img class="cources" src="./images/ICON/calendar.png" alt="" />
+                  Start 20 April, 2021</small>
+              </div>
+              <div class="col-md-6">
+                <small class="text-muted">
+                  <img class="cources" src="./images/ICON/people.png" alt="" />
+                  60 seats</small>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100 shadow">
-          <img class="img-p" src="./images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+          <img class="img-p" src="./images/Photos/Morder pychons.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Modern Psychology</h5>
             <p class="card-text">Designation</p>
@@ -153,12 +164,16 @@
           </div>
           <div class="card-footer">
             <div class="row">
-              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/calendar.png"
-                    alt=""> Start 20
-                  April, 2021</small></div>
-              <div class="col-md-6"><small class="text-muted"> <img class="cources" src="./images/ICON/people.png"
-                    alt=""> 60
-                  seats</small></div>
+              <div class="col-md-6">
+                <small class="text-muted">
+                  <img class="cources" src="./images/ICON/calendar.png" alt="" />
+                  Start 20 April, 2021</small>
+              </div>
+              <div class="col-md-6">
+                <small class="text-muted">
+                  <img class="cources" src="./images/ICON/people.png" alt="" />
+                  60 seats</small>
+              </div>
             </div>
           </div>
         </div>
@@ -172,17 +187,71 @@
     <div class="row">
       <div class="col-md-4">
         <div>
-          <img class="testmo" src="./images/Photos/Man.png" alt="">
+          <img class="testmo" src="./images/Photos/Man.png" alt="" />
         </div>
       </div>
       <div class="col-md-8">
-        <p>There are many variations of passages of Lorem Ipsum available, but the
-          majority have suffered alteration in some form, by injected humour,
-          or randomised words which don't look even slightly believable.
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly
+          believable.
         </p>
       </div>
     </div>
   </div>
+  <!-- testimonial work in done  -->
+
+  <footer>
+    <div class="container footer">
+      <div class="row">
+        <div class="col-md-4">
+          <h6>
+            Millions of people of all ages and from around the world are
+            improving their lives with us
+          </h6>
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-3">
+              <h5>Course</h5>
+              <ul>
+                <li>Graphic Design</li>
+                <li>Web Design</li>
+                <li>Business</li>
+                <li>Marketing</li>
+                <li>Engineering</li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h5>Terms</h5>
+              <ul>
+                <li>Graphic Design</li>
+                <li>Web Design</li>
+                <li>Business</li>
+                <li>Marketing</li>
+                <li>Engineering</li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h5>Useful Link</h5>
+              <ul>
+                <li>Graphic Design</li>
+                <li>Web Design</li>
+                <li>Business</li>
+                <li>Marketing</li>
+                <li>Engineering</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <h6>Copyright © 2020 E-School.com</h6>
+    </div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
